--- a/MassPersonaAssessment/appsettings.json
+++ b/MassPersonaAssessment/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=mydb;Username=postgres;Password=masspersona"
+  },
   "AllowedHosts": "*"
 }
